<resources>
    <string name="app_name">Tiempo</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="weather_status">Weather status</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_sign">hpa</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra violet</string>
    <string name="visibility">Visibility</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">Temperature</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit_sign">F</string>
    <string name="kelvin_sign">K</string>
    <string name="celsius_sign">C</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_per_sec">Meter / Sec</string>
    <string name="meter_per_sec_sign">m/s</string>
    <string name="mile_per_sec">Mile / hour</string>
    <string name="mile_per_sec_sign">mps</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="more">more</string>
    <string name="add_alarm">Add alarm</string>
    <string name="from">From</string>
    <string name="time">Time</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="weather_alarm">Weather alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alarms">Alarms</string>
    <string name="settings">Settings</string>
    <string name="select">Select</string>
    <string name="we_can_not_fetch_your_location">We couldn\'t fetch your location.</string>
    <string name="please_allow_app_to_access_location">Please allow app to access location!</string>
    <string name="allow">Allow</string>
    <string name="expired_date">Expired date</string>
    <string name="visi_unit">m</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure!</string>
    <string name="sure">Sure</string>
    <string name="start_should_be_before_end">Start date should be before end.</string>
    <string name="gps_is_disabled">Gps is disabled!</string>
    <string name="please_enable_gps">Please enable GPS!</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="channel_description" translatable="false">this channel to show weather status</string>
    <string name="some_thing_went_wrong">Some thing went wrong!</string>
    <string name="weather_is_fine">Weather is fine, no alerts for the scheduled time period.</string>

</resources>